--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -29,7 +29,7 @@ jobs:
       - name: Set up Node.js
       - uses: actions/setup-node@master
         with:
-          node-version: 14.16.1
+          node-version: 14.x
 
       - name: Install dependencies
         run: yarn install
